# pn532-cloner

./: .clang-format  AUTHORS  CMakeLists.txt  README.md  libnfc.conf.sample
lib_darwin_x64/: Notes.txt
lib_win/: Notes.txt
src/: CMakeLists.txt  cmdhfmfhard.c  cmdhfmfhard.h  conf.c  conf.h  crapto1.c  crapto1.h  crypto1.c  drivers.h  err.h  getopt.c  getopt.h  hardnested.c  hardnested.h  iso14443-subr.c  log.c  log.h  main.c  main.h  mifare.c  mifare.h  mirror-subr.c  mirror-subr.h  nfc-device.c  nfc-internal.c  nfc-internal.h  nfc-types.h  nfc-utils.c  nfc-utils.h  nfc.c  nfc.h  parity.h  pn532_uart.c  pn532_uart.h  pn53x-internal.h  pn53x.c  pn53x.h  slre.c  slre.h  target-subr.c  (+10 more)
src/hardnested/: hardnested_bf_core.c  hardnested_bf_core.h  hardnested_bitarray_core.c  hardnested_bitarray_core.h  hardnested_bruteforce.c  hardnested_bruteforce.h  tables.h
